client/css/custom.less
/* ... */
/* Boards admin table style */
.table {
	> tbody {
		tr {
			> td {
				vertical-align: top;
			}
			&:first-child {
				>td {
					.dropdown >.dropdown-menu {
						bottom: auto !important;
						margin-bottom: 1px;
						top: 100% !important;
						left: auto;
						right: 0;
					}
					.dropdown-menu {
						&.arrow-left, &.arrow-right {
							&:before {
								content: '';
								display: inline-block;
								border-left: 7px solid transparent;
								border-right: 7px solid transparent;
								border-bottom: 7px solid #ccc;
								border-bottom-color: @dropdown-border;
								position: absolute;
								top: -7px;
								left: auto;
								right: 12px;
							}
							&:after {
								content: '';
								display: inline-block;
								border-left: 6px solid transparent;
								border-right: 6px solid transparent;
								border-bottom: 6px solid @dropdown-bg;
								position: absolute;
								top: -6px;
								left: auto;
								right: 13px;
							}
						}
					}
				}
			}
		}
	}
}
.verticalTableHeader {
	text-align: left;
	white-space: nowrap;
	transform-origin: 50% 50%;
	transform: rotate(270deg);
	width: 20px;
	margin: 60px auto 0px;
}
.table-list {
	tr:first-child {
		td {
			border-top: 0;
		}
	}
}
.th-width-sm {
	width:160px;
}
table.acl-link-list > tbody> tr {
	td {
		border-top: none;
		border-bottom: 1px solid #ccc;
		&:first-child {
			border-top: transparent;
			border-bottom: transparent;
		}
	}
}
.board-viewlist {
	table {
		background-color: #f3f5f7;
		border-radius: 4px;
		> tbody {
			> tr {
				>td {
					width: 100%;
					padding-top: 0;
					padding-bottom: 0;
					border: none;
					.panel {
						margin: 5px 0;
						.card-id {
							padding-left: 5px;
							padding-right: 5px;
						}
						&.active {
							.box-shadow(5px 5px 15px @brand-primary);
							.card-id {
								background: @brand-primary;
								color: #ffffff;
							}
						}
					}
				}
				&:first-child {
					>td {
						.panel {
							margin-top: 20px;
						}
					}
				}
			}
		}
	}
}
.tabs-below {
	> .nav-tabs {
		border-top: 1px solid #ddd;
		border-bottom: none;
		> li {
			margin-top: -1px;
			margin-bottom: 0;
			> a {
				border-radius: 0 0 @border-radius-base @border-radius-base;
				&:hover, &:focus {
					border-bottom-color: transparent;
					border-top-color: #ddd;
				}
			}
			&.active {
				> a {
					border-color: transparent #ddd #ddd #ddd;
					background: #f3f5f7;
					&:hover, &:foucs {
						border-color: transparent #ddd #ddd #ddd;
					}
				}
			}
		}
	}
}
.list-activity {
	>a {
		width: 110px;
	}
}
/* Boards list style */
.board-list-view {
	-ms-flex-align: start;
	-moz-box-align: start;
	-webkit-box-align: start;
	-webkit-align-items: flex-start;
	align-items: flex-start;
	display: -webkit-box;
	display: -webkit-flex;
	display: -ms-flexbox;
	display: flex;
	-moz-box-orient: horizontal;
	-webkit-box-orient: horizontal;
	-ms-flex-direction: row;
	-webkit-flex-direction: row;
	flex-direction: row;
	margin-bottom: 10px;
	overflow-x: auto;
	overflow-x: inherit \9;
	padding-bottom: 10px;
	-webkit-overflow-scrolling: touch;
	&::-webkit-scrollbar {
		.square(13px);
	}
	&::-webkit-scrollbar-track {
		background: rgba(0,0,0,.05);
	}
	&::-webkit-scrollbar-button:start:decrement, &::-webkit-scrollbar-button:end:increment {
		background: transparent;
		display: none;
	}
	&::-webkit-scrollbar-thumb:vertical, &::-webkit-scrollbar-thumb:horizontal {
		background: #c2c2c2;
		border-radius: 5px;
		display: block;
		height: 50px;
	}
	.board-list-height {
		height: 100%;
	}
	.list {
		padding: 7px 10px;
		background-color: #f3f5f7;
		color: #555555;
		margin: 0 5px;
		margin: 0 20px \9;
		border-radius: 4px;
		border: 1px solid #eeeeee;
		-webkit-box-sizing: border-box;
		-moz-box-sizing: border-box;
		box-sizing: border-box;
		display: -webkit-box;
		display: -webkit-flex;
		display: -ms-flexbox;
		display: flex;
		-moz-box-orient: vertical;
		-webkit-box-orient: vertical;
		-ms-flex-direction: column;
		-webkit-flex-direction: column;
		flex-direction: column;
		-moz-box-flex: 0;
		-webkit-box-flex: 0;
		-ms-flex: 0 0 260px;
		-webkit-flex: 0 0 260px;
		flex: 0 0 260px;
		max-height: 100%;
		position: relative;
		width: 260px;
		.list-content {
			max-width: 260px;
			flex: 1 1 auto;
			-ms-flex: 1 1 auto;
			-webkit-flex: 1 1 auto;
			position: relative;
			-moz-box-flex: 1;
			-webkit-box-flex: 1;
			line-height: 1.3;
			margin-bottom: 0;
			word-wrap: break-word;
			overflow-x: hidden\9;
			overflow-y: auto\9;
			.avatar {
				position: inherit;
			}
		}
		.list-header {
			min-height: 19px;
			margin-bottom: 5px;
			margin-top: 0;
			max-width: 260px;
		}
		.list-footer {
			margin: 2px -7px -3px -11px;
			padding: 7px 10px;
		}
		.list-header, .list-footer {
			flex: 0 0 auto;
			-ms-flex: 0 0 auto;
			-webkit-flex: 0 0 auto;
			position: relative;
			-moz-box-flex: 0;
			-webkit-box-flex: 0;
			-moz-box-flex: 0;
		}
		.vertical-scrollbar {
			.dropdown-menu {
				width: 200px;
				margin-bottom: 1px;
			}
		}
		.panel {
			.box-shadow(0 1px 1px rgba(0,0,0,0.15));
			border: 1px solid #fff;
			&.active {
				.box-shadow(5px 5px 15px @brand-primary);
				.card-id {
					background: @brand-primary;
					color: #ffffff;
				}
			}
		}
		&:first-child {
			margin-left: 15px;
			margin-left: 20px \9;
		}
	}
	.board-list-placeholder.list {
		border: 1px dashed #999;
		height: 150px;
	}
	.dropdown-menu.arrow.arrow-right {
		right: -20px;
	}
	textarea {
		&.form-control {
			resize: none;
		}
	}
}
/* Boards chart & Calender style */
.chart-block {
	height: 133px;
	>li {
		height: 100%;
		padding: 0;
	}
	.chart {
		.square(125px);
		margin: 3px auto;
		.doughnutSummary {
			position: absolute;
			top: 50%;
			left: 50%;
			color: #000000;
			text-align: center;
			font-weight: bold;
			.doughnutSummaryNumber {
				font-size: 20px !important;
				padding-right: 3px;
				margin-top: 12px;
				color: @brand-primary;
			}
		}
	}
}
/* ... */

